--- a/MerlionPortal/MerlionPortal-war/web/wms/addnewwarehouse.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/addnewwarehouse.xhtml
@@ -2,41 +2,42 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
-    <h:head>
-        <title>Add New Warehouse</title>
-        <style type="text/css">
-            .gritter-notice-wrapper {
-                left:200px;
-                top: 50px;
-            }
-        </style>
-    </h:head>
-    <h:body>
-        <h:form id="formMain">
-            <h1>Welcome to WMS!</h1>
-            <p:layoutUnit position="west" resizable="true" size="240" minSize="40" maxSize="1000">
-                <p:menu>
-                    <p:submenu label =" Manage Your Warehouse">
-                        <p:menuitem value="HOME" url="wmsindex.xhtml" />
-                        <p:submenu label="Warehouse" >
-                            <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
-                            <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
-                        </p:submenu>
-                        <p:submenu label="Storage Type" >
-                            <p:menuitem value="Add Storage Type" url="addstoragetype.xhtml" />
-                            <p:menuitem value="View Storage Types" url="viewstoragetype.xhtml" />
-                        </p:submenu>
-                        <p:submenu label="Storage Bin" >
-                            <p:menuitem value="Add Storage Bin" url="addstoragebin.xhtml" />
-                            <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" />
-                        </p:submenu>
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
+
+    <ui:composition template="${root}/templates/templateadmin.xhtml">
+        <ui:param name="pageName" value="WMS home" />
+
+        <ui:define name="more-imports">
+            <ui:insert>
+                <!--                import CSS style or Javascript here, if any-->
+            </ui:insert>
+        </ui:define>
+
+        <ui:define name="left">
+
+
+            <p:menu>
+                <p:submenu label =" Manage Your Warehouse">
+                    <p:menuitem value="WMS" url="wmsindex.xhtml" />
+                    <p:submenu label="Warehouse" >
+                        <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
+                        <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
                     </p:submenu>
-                </p:menu>
-            </p:layoutUnit>
-            <br/>
-            <p:layoutUnit position="center">  
+                    <p:submenu label="Storage Type" >
+                        <p:menuitem value="Add Storage Type" url="addstoragetype.xhtml" />
+                        <p:menuitem value="View Storage Types" url="viewstoragetype.xhtml" />
+                    </p:submenu>
+                    <p:submenu label="Storage Bin" >
+                        <p:menuitem value="Add Storage Bin" url="addstoragebin.xhtml" />
+                        <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" />
+                    </p:submenu>
+                </p:submenu>
+            </p:menu>
+        </ui:define>
+        <ui:define name="right">
+            <h:form id="formMain">
                 <p:panel id="panel" header="Add New Warehouse">
                     <p:ajaxStatus style="width:16px;height:16px;">
                         <f:facet name="start">
@@ -121,8 +122,8 @@
                     </p:commandButton>
 
                 </p:panel>
-            </p:layoutUnit>
-        </h:form>
-    </h:body>
+            </h:form>
+        </ui:define>
+    </ui:composition>
 </html>                 
 
