--- a/MerlionPortal/MerlionPortal-war/web/wms/addstoragetype.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/addstoragetype.xhtml
@@ -2,9 +2,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
+
     <ui:composition template="${root}/templates/templateadmin.xhtml">
         <ui:param name="pageName" value="WMS home" />
 
@@ -13,12 +14,13 @@
                 <!--                import CSS style or Javascript here, if any-->
             </ui:insert>
         </ui:define>
-        <ui:define name="left">
-            <h:form id="formMain">
-                <h1>Welcome to WMS!</h1>
-                <p:menubar>
-                    <p:menuitem value="HOME" url="wmsindex.xhtml"/>
 
+        <ui:define name="left">
+
+
+            <p:menu>
+                <p:submenu label =" Manage Your Warehouse">
+                    <p:menuitem value="WMS" url="wmsindex.xhtml" />
                     <p:submenu label="Warehouse" >
                         <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
                         <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
@@ -31,8 +33,8 @@
                         <p:menuitem value="Add Storage Bin" url="addstoragebin.xhtml" />
                         <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" />
                     </p:submenu>
-                </p:menubar>
-            </h:form>
+                </p:submenu>
+            </p:menu>
         </ui:define>
 
         <ui:define name="right">
