--- a/MerlionPortal/MerlionPortal-war/web/wms/viewallwarehouse.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewallwarehouse.xhtml
@@ -3,112 +3,122 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-    <h:head>
-        <title>View My Warehouses</title>
-    </h:head>
-    <h:body>
-        <h1> View My Warehouses</h1>
-        <h:form id="formMain">  
-<!--            <p:growl id="msgs" showDetail="true"/>       -->
-            <p:menubar>
-                <p:menuitem value="HOME" url="wmsindex.xhtml"/>
-                <p:submenu label="Warehouse" >
-                    <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
-                    <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
+
+    <ui:composition template="${root}/templates/templateadmin.xhtml">
+        <ui:param name="pageName" value="WMS home" />
+
+        <ui:define name="more-imports">
+            <ui:insert>
+                <!--                import CSS style or Javascript here, if any-->
+            </ui:insert>
+        </ui:define>
+
+        <ui:define name="left">
+
+
+            <p:menu>
+                <p:submenu label =" Manage Your Warehouse">
+                    <p:menuitem value="WMS" url="wmsindex.xhtml" />
+                    <p:submenu label="Warehouse" >
+                        <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
+                        <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
+                    </p:submenu>
+                    <p:submenu label="Storage Type" >
+                        <p:menuitem value="Add Storage Type" url="addstoragetype.xhtml" />
+                        <p:menuitem value="View Storage Types" url="viewstoragetype.xhtml" />
+                    </p:submenu>
+                    <p:submenu label="Storage Bin" >
+                        <p:menuitem value="Add Storage Bin" url="addstoragebin.xhtml" />
+                        <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" />
+                    </p:submenu>
                 </p:submenu>
-                <p:submenu label="Storage Type" >
-                    <p:menuitem value="Add Storage Type" url="addstoragetype.xhtml" />
-                    <p:menuitem value="View Storage Types" url="viewstoragetype.xhtml" />
-                </p:submenu>
-                <p:submenu label="Storage Bin" >
-                    <p:menuitem value="Add Storage Bin" url="addstoragebin.xhtml" />
-                    <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" />
-                </p:submenu>
-            </p:menubar>
-            <br/>
-        </h:form>
-        <h:form>
-            <p:dataTable id="warehouse" var="warehouse" sortMode="multiple" editable="true" value="#{warehouseViewEditManagedBean.warehouses}" 
-                         widgetVar="warehousesTable"
-                         emptyMessage="No warehouse found"
-                         rowKey="#{warehouse.warehouseId}">
+            </p:menu>
+        </ui:define>
+        <ui:define name="right">
+            <h:form id="formMain">
+                <p:dataTable id="warehouse" var="warehouse" sortMode="multiple" editable="true" value="#{warehouseViewEditManagedBean.warehouses}" 
+                             widgetVar="warehousesTable"
+                             emptyMessage="No warehouse found"
+                             rowKey="#{warehouse.warehouseId}">
 
-                <f:facet name="header">                    
-                    <p:outputPanel>
-                        <h:outputText value="Search all fields:" />
-                        <p:inputText id="globalFilter" onkeyup="PF('warehousesTable').filter()" />
-                    </p:outputPanel>
-                </f:facet>
+                    <f:facet name="header">                    
+                        <p:outputPanel>
+                            <h:outputText value="Search all fields:" />
+                            <p:inputText id="globalFilter" onkeyup="PF('warehousesTable').filter()" />
+                        </p:outputPanel>
+                    </f:facet>
 
-                <p:ajax event="rowEdit" listener="#{warehouseViewEditManagedBean.onRowEdit}" />
-                <p:ajax event="rowEditCancel" listener="#{warehouseViewEditManagedBean.onRowCancel}" />
+                    <p:ajax event="rowEdit" listener="#{warehouseViewEditManagedBean.onRowEdit}" />
+                    <p:ajax event="rowEditCancel" listener="#{warehouseViewEditManagedBean.onRowCancel}" />
 
-                <p:column filterBy="#{warehouse.warehouseId}" filterMatchMode="exact" headerText="Warehouse ID" >
-                    <h:outputText value="#{warehouse.warehouseId}" />
-                </p:column>
+                    <p:column filterBy="#{warehouse.warehouseId}" filterMatchMode="exact" headerText="Warehouse ID" >
+                        <h:outputText value="#{warehouse.warehouseId}" />
+                    </p:column>
 
-                <p:column  filterBy="#{warehouse.name}" filterMatchMode="contains" headerText="Name Of Warehouse">
-                    <p:cellEditor>
-                        <f:facet name="output"><h:outputText value="#{warehouse.name}" /></f:facet>
-                        <f:facet name="input"><p:inputText value="#{warehouse.name}" style="width:100%" label="Name Of Warehouse"/></f:facet>
-                    </p:cellEditor>
-                </p:column>
+                    <p:column  filterBy="#{warehouse.name}" filterMatchMode="contains" headerText="Name Of Warehouse">
+                        <p:cellEditor>
+                            <f:facet name="output"><h:outputText value="#{warehouse.name}" /></f:facet>
+                            <f:facet name="input"><p:inputText value="#{warehouse.name}" style="width:100%" label="Name Of Warehouse"/></f:facet>
+                        </p:cellEditor>
+                    </p:column>
 
-                <p:column  filterBy="#{warehouse.country}" filterMatchMode="contains" headerText="Country">
-                    <p:cellEditor>
-                        <f:facet name="output"><h:outputText value="#{warehouse.country}" /></f:facet>
-                        <f:facet name="input"><p:inputText value="#{warehouse.country}" style="width:100%" label="Country"/></f:facet>
+                    <p:column  filterBy="#{warehouse.country}" filterMatchMode="contains" headerText="Country">
+                        <p:cellEditor>
+                            <f:facet name="output"><h:outputText value="#{warehouse.country}" /></f:facet>
+                            <f:facet name="input"><p:inputText value="#{warehouse.country}" style="width:100%" label="Country"/></f:facet>
 
-                    </p:cellEditor>
-                </p:column>
+                        </p:cellEditor>
+                    </p:column>
 
-                <p:column  filterBy="#{warehouse.city}" filterMatchMode="contains" headerText="City">
-                    <p:cellEditor>
-                        <f:facet name="output"><h:outputText value="#{warehouse.city}" /></f:facet>
-                        <f:facet name="input"><p:inputText value="#{warehouse.city}" style="width:100%" label="City"/></f:facet>
-                    </p:cellEditor>
-                </p:column>
+                    <p:column  filterBy="#{warehouse.city}" filterMatchMode="contains" headerText="City">
+                        <p:cellEditor>
+                            <f:facet name="output"><h:outputText value="#{warehouse.city}" /></f:facet>
+                            <f:facet name="input"><p:inputText value="#{warehouse.city}" style="width:100%" label="City"/></f:facet>
+                        </p:cellEditor>
+                    </p:column>
 
-                <p:column  filterBy="#{warehouse.street}" filterMatchMode="contains" headerText="Street">
-                    <p:cellEditor>
-                        <f:facet name="output"><h:outputText value="#{warehouse.street}" /></f:facet>
-                        <f:facet name="input"><p:inputText value="#{warehouse.street}" style="width:100%" label="Street"/></f:facet>
-                    </p:cellEditor>
-                </p:column>
+                    <p:column  filterBy="#{warehouse.street}" filterMatchMode="contains" headerText="Street">
+                        <p:cellEditor>
+                            <f:facet name="output"><h:outputText value="#{warehouse.street}" /></f:facet>
+                            <f:facet name="input"><p:inputText value="#{warehouse.street}" style="width:100%" label="Street"/></f:facet>
+                        </p:cellEditor>
+                    </p:column>
 
-                <p:column  filterBy="#{warehouse.zipcode}" filterMatchMode="contains" headerText="ZipCode">
-                    <p:cellEditor>
-                        <f:facet name="output"><h:outputText value="#{warehouse.zipcode}" /></f:facet>
-                        <f:facet name="input"><p:inputText value="#{warehouse.zipcode}" style="width:100%" label="ZipCode"/></f:facet>
-                    </p:cellEditor>
-                </p:column>
+                    <p:column  filterBy="#{warehouse.zipcode}" filterMatchMode="contains" headerText="ZipCode">
+                        <p:cellEditor>
+                            <f:facet name="output"><h:outputText value="#{warehouse.zipcode}" /></f:facet>
+                            <f:facet name="input"><p:inputText value="#{warehouse.zipcode}" style="width:100%" label="ZipCode"/></f:facet>
+                        </p:cellEditor>
+                    </p:column>
 
-                <p:column  headerText="Description">
-                    <p:cellEditor>
-                        <f:facet name="output"><h:outputText value="#{warehouse.description}" /></f:facet>
-                        <f:facet name="input"><p:inputText value="#{warehouse.description}" style="width:100%" label="Description"/></f:facet>
-                    </p:cellEditor>
-                </p:column>
+                    <p:column  headerText="Description">
+                        <p:cellEditor>
+                            <f:facet name="output"><h:outputText value="#{warehouse.description}" /></f:facet>
+                            <f:facet name="input"><p:inputText value="#{warehouse.description}" style="width:100%" label="Description"/></f:facet>
+                        </p:cellEditor>
+                    </p:column>
 
-                <p:column style="width:42px">
-                    <p:commandButton action="#{warehouseViewEditManagedBean.deleteWarehouse(warehouse)}" update="warehouse" icon = "ui-icon-trash">
-                        <p:confirm header="Confirm Deletion" message="Are you sure that you want to delete this warehouse?" icon="ui-icon-alert" />
-                    </p:commandButton> 
-                    <p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
-                        <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
-                        <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
-                    </p:confirmDialog>
-                </p:column>
+                    <p:column style="width:48px">
+                        <p:commandButton action="#{warehouseViewEditManagedBean.deleteWarehouse(warehouse)}" update="warehouse" icon = "ui-icon-trash">
+                            <p:confirm header="Confirm Deletion" message="Are you sure that you want to delete this warehouse?" icon="ui-icon-alert" />
+                        </p:commandButton> 
+                        <p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
+                            <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+                            <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+                        </p:confirmDialog>
+                    </p:column>
 
-                <p:column style="width:42px">
-                    <p:rowEditor />
-                </p:column>
+                    <p:column style="width:40px">
+                        <p:rowEditor />
+                    </p:column>
 
-            </p:dataTable>
-            <br></br>
-            <p:messages id="msgs" showDetail="true" autoUpdate="true" closable="true" />
-        </h:form>
-    </h:body>
+                </p:dataTable>
+                <br></br>
+                <p:messages id="msgs" showDetail="true" autoUpdate="true" closable="true" />
+            </h:form>
+        </ui:define>
+    </ui:composition>
 </html>
 
