--- a/MerlionPortal/MerlionPortal-war/web/wms/viewstoragetype.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewstoragetype.xhtml
@@ -2,115 +2,123 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
-    <h:head>
-        <title>Add New Storage Type</title>
-        <style type="text/css">
-            .gritter-notice-wrapper {
-                left:200px;
-                top: 50px;
-            }
-        </style>
-    </h:head>
-    <h:body>
-        <h:form id="formMain">
-            <h1>Welcome to WMS!</h1>
-            <p:menubar>
-                <p:menuitem value="HOME" url="wmsindex.xhtml"/>
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-                <p:submenu label="Warehouse" >
-                    <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
-                    <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
+    <ui:composition template="${root}/templates/templateadmin.xhtml">
+        <ui:param name="pageName" value="WMS home" />
+
+        <ui:define name="more-imports">
+            <ui:insert>
+                <!--                import CSS style or Javascript here, if any-->
+            </ui:insert>
+        </ui:define>
+
+        <ui:define name="left">
+            <p:menu>
+                <p:submenu label =" Manage Your Warehouse">
+                    <p:menuitem value="WMS" url="wmsindex.xhtml" />
+                    <p:submenu label="Warehouse" >
+                        <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
+                        <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
+                    </p:submenu>
+                    <p:submenu label="Storage Type" >
+                        <p:menuitem value="Add Storage Type" url="addstoragetype.xhtml" />
+                        <p:menuitem value="View Storage Types" url="viewstoragetype.xhtml" />
+                    </p:submenu>
+                    <p:submenu label="Storage Bin" >
+                        <p:menuitem value="Add Storage Bin" url="addstoragebin.xhtml" />
+                        <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" />
+                    </p:submenu>
                 </p:submenu>
-                <p:submenu label="Storage Type" >
-                    <p:menuitem value="Add Storage Type" url="addstoragetype.xhtml" />
-                    <p:menuitem value="View Storage Types" url="viewstoragetype.xhtml" />
-                </p:submenu>
-                <p:submenu label="Storage Bin" >
-                    <p:menuitem value="Add Storage Bin" url="addstoragebin.xhtml" />
-                    <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" />
-                </p:submenu>
-            </p:menubar>
-            <br/>
-            <p:panel id="panel" header=" View Storage Type for A Warehouse">
-                <p:ajaxStatus style="width:16px;height:16px;">
-                    <f:facet name="start">
-                        <h:graphicImage value="/img/load.gif" />
-                    </f:facet>
-                    <f:facet name="complete">
-                        <h:outputText value="" />
-                    </f:facet>
-                </p:ajaxStatus>
-                <p:panelGrid>
-                    <p:row>
-                        <p:column>
-                            <p:outputLabel for="warehouse" value="Warehouse Name: " />
+            </p:menu>
+        </ui:define>
+
+
+        <ui:define name="right">
+            <h:form id="formMain">
+
+                <p:panel id="panel" header=" View Storage Type for A Warehouse">
+                    <p:ajaxStatus style="width:16px;height:16px;">
+                        <f:facet name="start">
+                            <h:graphicImage value="/img/load.gif" />
+                        </f:facet>
+                        <f:facet name="complete">
+                            <h:outputText value="" />
+                        </f:facet>
+                    </p:ajaxStatus>
+                    <p:panelGrid>
+                        <p:row>
+                            <p:column>
+                                <p:outputLabel for="warehouse" value="Warehouse Name: " />
+                            </p:column>
+                            <p:column>
+                                <p:selectOneMenu id="warehouse" value="#{storageTypeViewEditManagedBean.warehouseId}"  style="width:300px" required="true" requiredMessage="Please select a warehouse">
+                                    <p:ajax listener="#{storageTypeViewEditManagedBean.onWarehouseChange}" update="storagetypeData" />
+                                    <f:selectItem itemLabel="Select Warehouse" itemValue="" noSelectionOption="true" />
+                                    <f:selectItems value="#{createStorageTypeManagerBean.warehouses}" var="warehouse" itemLabel="ID:#{warehouse.warehouseId} Name:#{warehouse.name}"  itemValue="#{warehouse.warehouseId}"/>
+                                </p:selectOneMenu>
+                            </p:column>
+                        </p:row>
+                    </p:panelGrid>
+
+                    <p:dataTable id="storagetypeData" var="storagetype" sortMode="multiple" editable="true" value="#{storageTypeViewEditManagedBean.storagetypes}" 
+                                 widgetVar="storageTypesTable"
+                                 emptyMessage="No Storage Type found"
+                                 rowKey="#{storagetype.storageTypeId}">
+
+                        <f:facet name="header">                    
+                            <p:outputPanel>
+                                <h:outputText value="Search Storage Type fields:" />
+                                <p:inputText id="globalFilter" onkeyup="PF('storageTypesTable').filter()" />
+                            </p:outputPanel>
+                        </f:facet>
+
+                        <p:ajax event="rowEdit" listener="#{storageTypeViewEditManagedBean.onRowEdit}" />
+                        <p:ajax event="rowEditCancel" listener="#{storageTypeViewEditManagedBean.onRowCancel}"/>                
+
+                        <p:column headerText="Warehouse Id" >
+                            <h:outputText value="#{storagetype.warehousewarehouseId.warehouseId}" />
                         </p:column>
-                        <p:column>
-                            <p:selectOneMenu id="warehouse" value="#{storageTypeViewEditManagedBean.warehouseId}"  style="width:300px" required="true" requiredMessage="Please select a warehouse">
-                                <p:ajax listener="#{storageTypeViewEditManagedBean.onWarehouseChange}" update="storagetypeData" />
-                                <f:selectItem itemLabel="Select Warehouse" itemValue="" noSelectionOption="true" />
-                                <f:selectItems value="#{createStorageTypeManagerBean.warehouses}" var="warehouse" itemLabel="ID:#{warehouse.warehouseId} Name:#{warehouse.name}"  itemValue="#{warehouse.warehouseId}"/>
-                            </p:selectOneMenu>
+
+                        <p:column filterBy="#{storagetype.storageTypeId}" filterMatchMode="exact" headerText="Storage Type ID" >
+                            <h:outputText value="#{storagetype.storageTypeId}" />
                         </p:column>
-                    </p:row>
-                </p:panelGrid>
 
-                <p:dataTable id="storagetypeData" var="storagetype" sortMode="multiple" editable="true" value="#{storageTypeViewEditManagedBean.storagetypes}" 
-                             widgetVar="storageTypesTable"
-                             emptyMessage="No Storage Type found"
-                             rowKey="#{storagetype.storageTypeId}">
+                        <p:column  filterBy="#{storagetype.name}" filterMatchMode="contains" headerText="Storage Type">
+                            <p:cellEditor>
+                                <f:facet name="output"><h:outputText value="#{storagetype.name}" /></f:facet>
+                                <f:facet name="input"><p:inputText value="#{storagetype.name}" style="width:100%" label="Storage Type"/></f:facet>
+                            </p:cellEditor>
+                        </p:column>     
+                        
+                        <p:column  headerText="Description">
+                            <p:cellEditor>
+                                <f:facet name="output"><h:outputText value="#{storagetype.description}" /></f:facet>
+                                <f:facet name="input"><p:inputText value="#{storagetype.description}" style="width:100%" label="Description"/></f:facet>
+                            </p:cellEditor>
+                        </p:column>
 
-                    <f:facet name="header">                    
-                        <p:outputPanel>
-                            <h:outputText value="Search Storage Type fields:" />
-                            <p:inputText id="globalFilter" onkeyup="PF('storageTypesTable').filter()" />
-                        </p:outputPanel>
-                    </f:facet>
+                        <p:column style="width:48px">
+                            <p:commandButton action="#{storageTypeViewEditManagedBean.deleteStorageType(storagetype)}" update="storagetypeData" icon = "ui-icon-trash">
+                                <p:confirm header="Confirm Deletion" message="Are you sure that you want to delete this storage bin?" icon="ui-icon-alert" />
+                            </p:commandButton> 
+                            <p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
+                                <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+                                <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+                            </p:confirmDialog>
+                        </p:column>
 
-                    <p:ajax event="rowEdit" listener="#{storageTypeViewEditManagedBean.onRowEdit}" />
-                    <p:ajax event="rowEditCancel" listener="#{storageTypeViewEditManagedBean.onRowCancel}"/>                
+                        <p:column style="width:42px">
+                            <p:rowEditor />
+                        </p:column>
 
-                    <p:column headerText="Warehouse Id" >
-                        <h:outputText value="#{storagetype.warehousewarehouseId.warehouseId}" />
-                    </p:column>
-
-                    <p:column filterBy="#{storagetype.storageTypeId}" filterMatchMode="exact" headerText="Storage Type ID" >
-                        <h:outputText value="#{storagetype.storageTypeId}" />
-                    </p:column>
-
-                    <p:column  filterBy="#{storagetype.name}" filterMatchMode="contains" headerText="Storage Type">
-                        <p:cellEditor>
-                            <f:facet name="output"><h:outputText value="#{storagetype.name}" /></f:facet>
-                            <f:facet name="input"><p:inputText value="#{storagetype.name}" style="width:100%" label="Storage Type"/></f:facet>
-                        </p:cellEditor>
-                    </p:column>                
-                    <p:column  headerText="Description">
-                        <p:cellEditor>
-                            <f:facet name="output"><h:outputText value="#{storagetype.description}" /></f:facet>
-                            <f:facet name="input"><p:inputText value="#{storagetype.description}" style="width:100%" label="Description"/></f:facet>
-                        </p:cellEditor>
-                    </p:column>
-
-                    <p:column style="width:42px">
-                        <p:commandButton action="#{storageTypeViewEditManagedBean.deleteStorageType(storagetype)}" update="storagetypeData" icon = "ui-icon-trash">
-                            <p:confirm header="Confirm Deletion" message="Are you sure that you want to delete this storage bin?" icon="ui-icon-alert" />
-                        </p:commandButton> 
-                        <p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
-                            <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
-                            <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
-                        </p:confirmDialog>
-                    </p:column>
-
-                    <p:column style="width:42px"">
-                        <p:rowEditor />
-                    </p:column>
-
-                </p:dataTable>
-                <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
-            </p:panel>
-        </h:form>
-    </h:body>
+                    </p:dataTable>
+                    <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+                </p:panel>
+            </h:form>
+        </ui:define>
+    </ui:composition>
 </html>                 
 
