--- a/MerlionPortal/MerlionPortal-war/web/wms/viewstoragetype.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewstoragetype.xhtml
@@ -4,9 +4,14 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
-    <ui:composition template="${root}/templates/templateadmin.xhtml">
+    <c:set var="import" value="templateuser.xhtml"/>
+    <c:if test="#{dashboardBean.canUseCI() || dashboardBean.loginedUser.userType == 'superuser'}">
+        <c:set var="import" value="templateadmin.xhtml"/>
+    </c:if>
+    <ui:composition template="${root}/templates/${import}">
         <ui:param name="pageName" value="WMS home" />
 
         <ui:define name="more-imports">
@@ -92,7 +97,7 @@
                                 <f:facet name="input"><p:inputText value="#{storagetype.name}" style="width:100%" label="Storage Type"/></f:facet>
                             </p:cellEditor>
                         </p:column>     
-                        
+
                         <p:column  headerText="Description">
                             <p:cellEditor>
                                 <f:facet name="output"><h:outputText value="#{storagetype.description}" /></f:facet>
